fix: z-index issues in change modal

--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -198,7 +198,7 @@ ol {
 }
 
 .searchbar {
-  z-index: 2;
+  z-index: 1;
   display: flex;
   justify-content: center;
   flex-direction: column;
