--- a/src/styles/scss/App.scss
+++ b/src/styles/scss/App.scss
@@ -217,7 +217,7 @@ ol {
 }  
 
 .searchbar {
-  z-index: 2;
+  z-index: 1;
   display: flex;
   justify-content: center;
   flex-direction: column;
